--- a/profile-site/css/style.scss
+++ b/profile-site/css/style.scss
@@ -6,7 +6,8 @@ body {
 p {
     line-height: 1.5;
 }
-.header__inner, .content {
+.header__inner,
+.content {
     max-width: 960px;
     margin-right: auto;
     margin-left: auto;
@@ -50,13 +51,12 @@ p {
     width: 100%;
     height: 100%;
 }
+.hero__img {
+    width: 100%;
+}
 .header-nav__link {
     color: #333;
     text-decoration: none;
-    font-size: 0.9rem;
-}
-.hero__img {
-    width: 100%;
 }
 .level2-heading__wrapper {
     text-align: center;
