--- a/_scss/style.css
+++ b/_scss/style.css
@@ -1,10 +1,7 @@
 @charset "UTF-8";
 /* ****************************************************
-		   共通
+		   要素型
 ***************************************************** */
-/* -----------------------------------------------------
-            タグ
------------------------------------------------------ */
 body {
   color: #333;
   font-size: 0.875rem;
@@ -18,10 +15,10 @@ img {
   max-width: 100%;
 }
 
-/* -----------------------------------------------------
-            外枠
------------------------------------------------------ */
-.header__wrapper {
+/* ****************************************************
+		   コンテンツ
+***************************************************** */
+.header {
   max-width: 1000px;
   margin-right: auto;
   margin-left: auto;
@@ -31,14 +28,14 @@ img {
   padding-bottom: 30px;
 }
 
-.hero__wrapper {
+.hero {
   max-width: 1000px;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 30px;
 }
 
-.footer__wrapper {
+.footer {
   max-width: 1000px;
   margin-right: auto;
   margin-left: auto;
@@ -46,22 +43,12 @@ img {
   padding-bottom: 30px;
 }
 
-.content__wrapper {
+.content {
   max-width: 760px;
   margin-right: auto;
   margin-left: auto;
   padding-top: 30px;
   padding-bottom: 30px;
-}
-
-/* -----------------------------------------------------
-            フォントクラス
------------------------------------------------------ */
-/* -----------------------------------------------------
-            背景クラス
------------------------------------------------------ */
-.bg-gray {
-  background-color: #f5f5f5;
 }
 
 /* ****************************************************
