--- a/_scss/_cheat.scss
+++ b/_scss/_cheat.scss
@@ -9,6 +9,49 @@
 }
 
 /* -----------------------------------------------------
+            navigation
+----------------------------------------------------- */
+
+.header-nav {
+    display: flex;
+    justify-content: space-around;
+}
+  
+.header-nav__item {
+    flex-grow: 1;
+    text-align: center;
+}
+  
+.header-nav__item:last-child .header-nav__link::after {
+    content: none;
+}
+  
+.header-nav__link {
+    position: relative;
+    display: block;
+    padding: 15px 5px;
+    border-bottom: 4px solid transparent;
+    color: #222;
+    text-decoration: none;
+    transition: .25s;
+}
+  
+.header-nav__link:focus,
+.header-nav__link:hover {
+    border-bottom-color: #e25c00;
+}
+  
+.header-nav__link::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: 0;
+    width: 1px;
+    height: 20px;
+    background-color: #ddd;
+    transform: translateY(-50%);
+}
+/* -----------------------------------------------------
             half-media
 ----------------------------------------------------- */
 
