--- a/my-work/css/style.css
+++ b/my-work/css/style.css
@@ -1,1 +1,109 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@charset "UTF-8";
+/* ****************************************************
+		   要素型
+***************************************************** */
+body {
+  color: #24292e;
+}
+
+p {
+  line-height: 1.5;
+}
+
+img {
+  max-width: 100%;
+}
+
+/* ****************************************************
+		   コンテンツ
+***************************************************** */
+.header {
+  max-width: 960px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.hero {
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 30px;
+}
+
+.footer {
+  max-width: 960px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.about,
+.work,
+.news,
+.contact {
+  max-width: 960px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+/* -----------------------------------------------------
+            FONT
+----------------------------------------------------- */
+.level2-heading {
+  font-size: 1.5rem;
+  text-align: center;
+  margin-bottom: 65px;
+  letter-spacing: .25rem;
+}
+
+/* ****************************************************
+		   クラス別
+***************************************************** */
+/* -----------------------------------------------------
+            .header
+----------------------------------------------------- */
+/* -----------------------------------------------------
+            .hero
+----------------------------------------------------- */
+.hero-picture__img-pc {
+  width: 100%;
+  max-width: 1920px;
+  height: 420px;
+  background-position: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/* -----------------------------------------------------
+            .about
+----------------------------------------------------- */
+/* -----------------------------------------------------
+            .work
+----------------------------------------------------- */
+.work-images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.work-images .work-images__item {
+  width: 30%;
+  margin-bottom: 24px;
+  margin-right: 20px;
+}
+
+.work-images .work-images__item:nth-child(3n) {
+  margin-right: 0;
+}
+/*# sourceMappingURL=style.css.map */
