--- a/_scss/_cheat.scss
+++ b/_scss/_cheat.scss
@@ -1,13 +1,29 @@
 /* -----------------------------------------------------
-            フォントクラス
+            FONT
 ----------------------------------------------------- */
+.level2-heading {
+    text-align: center;
+    font-size: 1.25rem;
+    margin-bottom: 20px;
+}
+.main-text {
+    text-align: center;
+    margin-bottom: 20px;
+}
 /* -----------------------------------------------------
-            背景クラス
+            BACKGROUND
 ----------------------------------------------------- */
 .bg-gray {
     background-color: #f5f5f5;
 }
-
+// -- FULL -- //
+.header {
+    height: 100vh;
+    background-image: url();
+    background-size: cover;
+    background-position: center top;
+    background-repeat: no-repeat;
+}
 /* -----------------------------------------------------
             navigation
 ----------------------------------------------------- */
@@ -173,7 +189,7 @@
 .three-images {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center; 
+    justify-content: center;
     & .three-images__item {
         width: 30%;
         margin-bottom: 24px;
@@ -182,4 +198,17 @@
             margin-right: 0;
         }
     }
+}
+/* -----------------------------------------------------
+            absoluteで中央配置
+----------------------------------------------------- */
+.center {
+    position: absolute;
+    top: 40%;
+    left: 0;
+    right: 0;
+    margin:  0 auto;
+    padding: 20px 0 20px;
+    width: 80%;
+    background-color: rgba(0,0,0, .5);
 }
