--- a/_scss/_cheat.scss
+++ b/_scss/_cheat.scss
@@ -17,12 +17,30 @@
     background-color: #f5f5f5;
 }
 // -- FULL -- //
-.header {
+.header-full-image {
     height: 100vh;
     background-image: url();
     background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
+}
+/* -----------------------------------------------------
+            BTN
+----------------------------------------------------- */
+.global-btn {
+    display: block;
+    width: 200px;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 20px 5px;
+    background-color: transparent;
+    border: 1px solid #333;
+    // box-shadow: 0 3px 6px rgba(0, 0, 0, .16);
+    color: #000;
+    font-size: .75rem;
+    text-align: center;
+    text-decoration: none;
+    transition: .25s;
 }
 /* -----------------------------------------------------
             navigation
