--- a/english-school/css/style.scss
+++ b/english-school/css/style.scss
@@ -36,9 +36,16 @@ $contentWidth: 760px;
     padding-top: 30px;
     padding-bottom: 30px;
 }
-.reason {
-    padding-top: 30px;
-    padding-bottom: 30px;
+.reason{
+    padding-top: 80px;
+    padding-bottom: 80px;
+    overflow: hidden;
+}
+.review {
+    max-width: 860px;
+    margin: 0 auto;
+    padding-top: 80px;
+    padding-bottom: 80px;
     overflow: hidden;
 }
 /* -----------------------------------------------------
@@ -168,4 +175,36 @@ $contentWidth: 760px;
 .reason__text {
     font-size: 1rem;
     letter-spacing: .1em;
+}
+
+/* -----------------------------------------------------
+            .review
+----------------------------------------------------- */
+.review-person__inner {
+    width: 72%;
+    margin-bottom: 80px;
+    padding: 5%;
+    background-color: #e9f1fb;
+    border-radius: 8px;
+    opacity: 0;
+    &:nth-child(2n+1) {
+        margin-left: auto;
+    }
+}
+.balloonReview {
+    @include animation(
+        $name: balloonReview,
+        $duration: .7s,
+        $timing-function: ease-in-out,
+    );
+}
+@keyframes balloonReview {
+    0% {
+        transform: scale(0.1);
+        opacity: 0;
+      }
+      100% {
+        transform: scale(1);
+        opacity: 1;
+      }
 }
